--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,10 +1,16 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 def RIOT_API_KEY = '"' + RiotAPIKey + '"' ?: '"Define Riot API key"'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
     defaultConfig {
         applicationId "pl.patrykzygo.rito_test"
         minSdkVersion 21
@@ -25,6 +31,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -36,18 +46,24 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
 
     // Retrofit
-    compile "com.squareup.retrofit2:retrofit:2.1.0"
-    compile "com.squareup.retrofit2:converter-gson:2.1.0"
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
+    // Rx Java
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
 
     // Butterknife
     compile "com.jakewharton:butterknife:8.0.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:8.0.1"
 
-    // Dependency Injection
-    annotationProcessor "com.google.dagger:dagger-compiler:2.2"
-    compile "com.google.dagger:dagger:2.2"
-    provided 'javax.annotation:jsr250-api:1.0'
-    testCompile 'junit:junit:4.12'
+    // Dagger
+    compile 'com.google.dagger:dagger:2.10'
+    compile 'com.google.dagger:dagger-android:2.10'
+    compile 'com.google.dagger:dagger-android-support:2.10'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
     // Testing
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
