--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     // Leak canary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
